<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/app_bg" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg"
        android:gravity="center_vertical"
        android:text="@string/title"
        android:textColor="#FFFAFA"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:text="@string/title_bind"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/edit_warnning_01"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/phoneNum"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/edit"
            android:drawableRight="@drawable/phone"
            android:hint="@string/edit_hint"
            android:inputType="phone"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@android:color/black"
            android:textSize="20sp" >

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/edit_warnning_01"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/phoneNum_confirm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/edit"
            android:drawableRight="@drawable/phone"
            android:inputType="phone"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@android:color/black"
            android:textSize="20sp" >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/bind_text"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/okBtn"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_bg_selector"
            android:drawablePadding="50dp"
            android:text="@string/bind_button"
            android:textColor="#c0000000"
            android:textSize="20sp" />
    </LinearLayout>

</FrameLayout>