<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/title_bg"
            android:gravity="center_vertical"
            android:text="@string/title"
            android:textColor="#FFFAFA"
            android:textSize="20sp" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.24"
        android:paddingTop="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="68dp"
            android:orientation="vertical" >

            <FrameLayout
                android:id="@+id/frameLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp" >

                <TableLayout
                    android:id="@+id/tableLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="70dp"
                    android:background="@drawable/otp_number_bg1"
                    android:gravity="center|top" >

                    <TableRow
                        android:id="@+id/tableRow1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="17dp"
                        android:paddingLeft="6dp" >

                        <ImageView
                            android:id="@+id/imageView0"
                            android:layout_width="29dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="3dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/otp_number_zero" />

                        <ImageView
                            android:id="@+id/imageView1"
                            android:layout_width="29dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="0.5dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/otp_number_zero" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="29dp"
                            android:layout_height="50dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/otp_number_zero" />

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="29dp"
                            android:layout_height="50dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/otp_number_zero" />

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="29dp"
                            android:layout_height="50dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/otp_number_zero" />

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="29dp"
                            android:layout_height="50dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/otp_number_zero" />

                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="29dp"
                            android:layout_height="50dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/otp_number_zero" />

                        <ImageView
                            android:id="@+id/imageView7"
                            android:layout_width="29dp"
                            android:layout_height="50dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/otp_number_zero" />

                        <ImageView
                            android:id="@+id/imageView8"
                            android:layout_width="29dp"
                            android:layout_height="50dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/otp_number_zero" />

                        <ImageView
                            android:id="@+id/imageView9"
                            android:layout_width="29dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="0.8dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/otp_number_zero" />
                    </TableRow>
                </TableLayout>

                <Button
                    android:id="@+id/btnGet"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="80dp"
                    android:background="@drawable/btn_bg_selector"
                    android:text="@string/get"
                    android:textColor="@drawable/btn_color_select"
                    android:textSize="20sp" />
            </FrameLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/warning"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>